test/must_fail/parallel_ammeters.ref
warn: Device ammeter A2 is parallel to device ammeter A1 (anode 2, cathode 0), this may cause problems!
error: Problem with nets v_ammeter__a1#branch,v_ammeter__a1#branch (check if capacitors have path to ground)
hint: Net v_ammeter__a1#branch contains: 
hint: If 2 capacitors are in series, their common pin must have path to ground, use e.g. 10G resistor to ground
hint: Unconnected pins of capacitors must be connected to ground, use e.g. 10G resistor to ground
error: Transient analysis timestep too small
hint: stderr doAnalyses: TRAN:  Timestep too small; initial timepoint: cause unrecorded.
error: Unhandled error in the output of ngspice: stderr Warning: Last gmin step failed
error: Unhandled error in the output of ngspice: stderr Warning: Last gmin step failed
error: Unhandled error in the output of ngspice: stderr Supplies reduced to   0.0000% Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
error: Unhandled error in the output of ngspice: stderr Warning: gmin step failed
error: Unhandled error in the output of ngspice: stderr Warning: source stepping failed
error: Unhandled error in the output of ngspice: stdout Transient solution failed -
netlist : string[243] = ** netlist_render BEGIN
* battery U1
.subckt sub_battery_U1 a b
 Rs a 1 1
 V0 1 b DC 9
.ends sub_battery_U1
x_U1 1 0 sub_battery_U1
R_R1 1 2 100
* ammeter A1
V_AMMETER__A1 2 0 DC 0
* ammeter A2
V_AMMETER__A2 2 0 DC 0
** netlist_render END
.end
log Array (72 items): (Object #2.1)
    [0]: string[62] = stdout Doing analysis at TEMP = 27.000000 and TNOM = 27.000000
    [1]: string[91] = stderr Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [2]: string[43] = stderr Note: Starting dynamic gmin stepping
    [3]: string[118] = stderr Trying gmin =   1.0000E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [4]: string[38] = stderr Warning: Further gmin increment
    [5]: string[118] = stderr Trying gmin =   5.6234E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [6]: string[38] = stderr Warning: Further gmin increment
    [7]: string[118] = stderr Trying gmin =   8.6596E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [8]: string[38] = stderr Warning: Further gmin increment
    [9]: string[118] = stderr Trying gmin =   9.6466E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [10]: string[38] = stderr Warning: Further gmin increment
    [11]: string[118] = stderr Trying gmin =   9.9105E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [12]: string[38] = stderr Warning: Further gmin increment
    [13]: string[118] = stderr Trying gmin =   9.9775E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [14]: string[38] = stderr Warning: Further gmin increment
    [15]: string[118] = stderr Trying gmin =   9.9944E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [16]: string[38] = stderr Warning: Further gmin increment
    [17]: string[118] = stderr Trying gmin =   9.9986E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [18]: string[38] = stderr Warning: Further gmin increment
    [19]: string[118] = stderr Trying gmin =   9.9996E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [20]: string[37] = stderr Warning: Last gmin step failed
    [21]: string[91] = stderr Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [22]: string[44] = stderr Warning: Dynamic gmin stepping failed
    [23]: string[40] = stderr Note: Starting true gmin stepping
    [24]: string[118] = stderr Trying gmin =   1.0000E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [25]: string[38] = stderr Warning: Further gmin increment
    [26]: string[118] = stderr Trying gmin =   5.6234E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [27]: string[38] = stderr Warning: Further gmin increment
    [28]: string[118] = stderr Trying gmin =   8.6596E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [29]: string[38] = stderr Warning: Further gmin increment
    [30]: string[118] = stderr Trying gmin =   9.6466E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [31]: string[38] = stderr Warning: Further gmin increment
    [32]: string[118] = stderr Trying gmin =   9.9105E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [33]: string[38] = stderr Warning: Further gmin increment
    [34]: string[118] = stderr Trying gmin =   9.9775E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [35]: string[38] = stderr Warning: Further gmin increment
    [36]: string[118] = stderr Trying gmin =   9.9944E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [37]: string[38] = stderr Warning: Further gmin increment
    [38]: string[118] = stderr Trying gmin =   9.9986E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [39]: string[38] = stderr Warning: Further gmin increment
    [40]: string[118] = stderr Trying gmin =   9.9996E-03 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [41]: string[37] = stderr Warning: Last gmin step failed
    [42]: string[91] = stderr Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [43]: string[41] = stderr Warning: True gmin stepping failed
    [44]: string[37] = stderr Note: Starting source stepping
    [45]: string[121] = stderr Supplies reduced to   0.0000% Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [46]: string[118] = stderr Trying gmin =   1.0000E-02 Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [47]: string[32] = stderr Warning: gmin step failed
    [48]: string[38] = stderr Warning: source stepping failed
    [49]: string[33] = stderr Note: Transient op started
    [50]: string[91] = stderr Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [51]: string[91] = stderr Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [52]: string[91] = stderr Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [53]: string[91] = stderr Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [54]: string[91] = stderr Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [55]: string[91] = stderr Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [56]: string[91] = stderr Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [57]: string[91] = stderr Warning: singular matrix:  check nodes v_ammeter__a1#branch and v_ammeter__a1#branch
    [58]: string[34] = stdout Transient solution failed -
    [59]: string[25] = stdout Last Node Voltages
    [60]: string[25] = stdout ------------------
    [61]: string[79] = stdout Node                                   Last Voltage        Previous Iter
    [62]: string[79] = stdout ----                                   ------------        -------------
    [63]: string[79] = stdout 1                                                 0                    0
    [64]: string[79] = stdout x_u1.1                                            0                    0
    [65]: string[79] = stdout 2                                                 0                    0
    [66]: string[79] = stdout v_ammeter__a2#branch                              0                    0
    [67]: string[79] = stdout v_ammeter__a1#branch                              0                    0
    [68]: string[81] = stdout v.x_u1.v0#branch                                  0                    9 *
    [69]: string[27] = stdout No. of Data Rows : 0
    [70]: string[82] = stderr doAnalyses: TRAN:  Timestep too small; initial timepoint: cause unrecorded.
    [71]: string[33] = stderr tran simulation(s) aborted
error: ngspice_process_log() found 8 errors
  [parallel_ammeters.ngjs:0:0] in <anonymous>()
    tran().run().chart('I(A1)');
           ^

Stack trace (4 frames):
  [Exception.js:0:0, core.js:0:0] in Exception()
    Internal.buffered_stack_trace(aMessage || "Error");
             ^
  [ngspice_process_log.js:0:0, core.js:0:0] in ngspice_process_log()
    throw new Exception('ngspice_process_log() found ' + errors.length + ' errors');
          ^
  [analysis/tran.js:0:0, core.js:0:0] in Tran.run()
    var err = ngspice_process_log(ngspice_log(), this.ret.netlist);
              ^
  [parallel_ammeters.ngjs:0:0] in <anonymous>()
    tran().run().chart('I(A1)');
           ^

exit(12)
